test/typechecker.d/valid/consts3.surc
n: Integer = 4

f(x: Char): Integer = n
