test/typechecker.d/invalid/match3.surc
match3(dox: Integer): Integer = match 'a'
	3 -> 3
	n -> 4: Integer
